# Author: Alec Foster, Antonio Cervantes, Colter Ogden
# NetID: sirslush, antonioc1, jcogden
# Date: 11/4/2018
# Project 2

cmake_minimum_required(VERSION 3.1)

# Define the project name. 

project (sirslush_antonioc1_jcogden_dgpen)

# Add a subdirectory to the project. The CMakeLists.txt file in that subdirectory
# will be used for further setting up the project.

add_subdirectory( src )